# trial-cabal

./: CHANGELOG.md  LICENSE  README.md  setup.sh  trial-cabal.cabal
.github/workflows/: haskell.yml  haskell2.yml
src/: Checker.hs  Compiler.hs  Lexer.hs  Parser.hs
test/: CheckerSpec.hs  CompilerSpec.hs  LexerSpec.hs  ParserSpec.hs
