cabal-version:      3.10
name:               trial-cabal

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            MIT

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Ryu-Okamoto

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         r-okamot@ist.osaka-u.ac.jp

-- A copyright notice.
-- copyright:
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    -- Import common warning flags.
    import: warnings

    -- Modules exported by the library.
    exposed-modules:
        Lexer,
        Parser,
        Checker,
        Compiler

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.18.2

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

executable trial-cabal
    -- Import common warning flags.
    -- import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.18.2,
        trial-cabal

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite trial-cabal-test
    -- Import common warning flags.
    -- import:           warnings

    -- Base language which the package is written in.
    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    other-modules:
        LexerSpec,
        ParserSpec,
        CheckerSpec,
        CompilerSpec

    -- LANGUAGE extensions used by modules in this package.
    other-extensions:
        -- hspec-discover

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Spec.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.18.2,
        trial-cabal,
        hspec,
        hspec-contrib,
        QuickCheck,
        HUnit

    build-tool-depends: 
        hspec-discover:hspec-discover
